Fix quarantined page table spacing

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -89,6 +89,12 @@ html {
   width: 150px;
 }
 
+.width-160px {
+  max-width: 160px;
+  min-width: 160px;
+  width: 160px;
+}
+
 .width-170px {
   max-width: 170px;
   min-width: 170px;
